--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "coffee-script": "1.6.1"
   },
   "scripts": {
+    "build": "./node_modules/.bin/coffee -c back-on-promise.coffee",
     "test": "mocha --compilers coffee:coffee-script -C"
   },
   "main"          : "back-on-promise.js",
